--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-web:
-  build: .
-  ports:
-    - "8090:8888"
-  environment:
-    PORT: 8090 # this is optional, allows express to use process.env.PORT instead of a raw 8090
+version: '2'
+
+services:
+  web:
+    container_name: myapp
+    build: .
+    ports:
+      - "8090:8888"
+    environment:
+      PORT: 8090 # this is optional, allows express to use process.env.PORT instead of a raw 8090
